# cpp_proc

./: .gitignore  CMakeLists.txt  README.md  compile-run.sh  install.sh  run.sh
include/: cpm.h  cpm.hpp  keybinds.hpp  manager.hpp  sort.hpp  sysinfo.hpp  ui.h  ui.hpp
src/: cpm.cpp  keybinds.cpp  main.cpp  manager.cpp  sort.cpp  sysinfo.cpp  ui.cpp
